# strand-resume-builder

./: .bedrock_agentcore.yaml  .gitignore  README.md  entrypoint.py  main.py  pyproject.toml  serve.py
.bedrock_agentcore/resume_modifier_agent/: dependencies.hash
.kiro/specs/resume-modifier-agent/: .config.kiro  design.md  requirements.md  tasks.md
frontend/: app.js  index.html  styles.css
output/: ouput.txt
src/: __init__.py  agent.py  entrypoint.py
src/models/: schemas.py
src/tools/: extract_text_from_pdf.py  generate_resume_html.py  manage_versions.py  match_skills.py  parse_job_description.py  parse_resume.py
tutorial/lab1/: README.md  setup.sh  step1_hello_agent.py  step2_first_tool.py  step3_conversation.py  step4_resume_agent.py
tutorial/lab2/: README.md  setup.sh  step1_textract_basics.py  step2_pdf_tool.py
tutorial/lab3/: README.md  step1_skill_matching.py  step2_html_generation.py  step3_version_management.py
tutorial/lab4/: README.md  setup.sh  step1_entrypoint.py  step3_serve.py
tutorial/lab4/step2_frontend/: app.js  index.html  styles.css
