[project]
name = "resume-modifier-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.6.0",
    "boto3>=1.42.80",
    "strands-agents>=1.34.0",
]

[dependency-groups]
dev = [
    "bedrock-agentcore-starter-toolkit>=0.3.4",
    "hypothesis>=6.151.10",
    "moto>=5.1.22",
    "pytest>=9.0.2",
]
